save progress. Next step is getting correct exit codes from underlying bash scripts